# arxiv-mcp-server

./: .gitignore  CLAUDE.md  GEMINI.md
.claude/commands/: start-arxiv-search-mcp.md  stop-arxiv-search-mcp.md
arxiv-mcp-server/: .env.example  .gitignore  .mcp.json  QUICKSTART.md  README.md  claude-config-example.json  pyproject.toml  requirements.txt  start-server.sh  stop-server.sh  test_server.py
arxiv-mcp-server/src/: __init__.py  arxiv_search.py  models.py  query_parser.py  server.py
prd-driven-workflow/: README.md
tasks/: prd-arxiv-mcp-server.md
